Closed
Bug 1602051
Opened 1 year ago
Closed 1 year ago
imgITools.decodeImageFromChannelAsync's observer should be optional.
Categories
(Core :: ImageLib, defect)
Core
ImageLib
Tracking
()
RESOLVED
FIXED
mozilla73
Tracking | Status | |
---|---|---|
firefox73 | --- | fixed |
People
(Reporter: mossop, Assigned: mossop)
Details
Attachments
(1 file)
No description provided.
Assignee | ||
Comment 1•1 year ago
|
||
Pushed by dtownsend@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6871f19ffc29 Failing to pass an observer to imgITools.decodeImageFromChannelAsync crashes. r=snorp
Comment 3•1 year ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 1 year ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in
before you can comment on or make changes to this bug.
Description
•