Bug 1602051: Failing to pass an observer to imgITools.decodeImageFromChannelAsync crashes. r=snorp

Differential Revision: https://phabricator.services.mozilla.com/D56222

--HG--
extra : moz-landing-system : lando